<?xml version="1.0"?>
<package format="3">
  <name>vmu931_imu</name>
  <version>1.0.0</version>
  <description>The vmu931_imu package</description>

  <maintainer email="jmnavarrete@robotnik.es">Juan Manuel Navarrete</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
	  <built_type>ament_python</build_type>
  </export>
</package>
