<?xml version="1.0"?>
<package format="2">
  <name>vmu931_msgs</name>
  <version>0.0.0</version>
  <description>The vmu931_msgs package</description>

  <maintainer email="sgemme@protonmail.com">Sebastien Gemme</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <exec_depend>robotnik_msgs</exec_depend>
  <exec_depend>message_exectime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
